# ie-sample-python-project

./: README.md  pyproject.toml  setup.cfg
src/ie_nlp_utils/: __init__.py  tokenization.py
tests/: test_tokenize.py
